<resources>
    <string name="app_name">Wide-awake financials</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Search">Search</string>
    <string name="add_expense">Search</string>
    <string name="expenses">Expenses</string>
    <string name="income">Income</string>
    <string name="home">home</string>
    <string name="analysis">Analysis</string>
    <string name="settings">settings</string>
    <string name="add_category">Add Category</string>
    <string name="category_color">Category Color</string>
    <string name="cannot_be_empty">This field cannot be empty</string>
    <string name="description">description</string>
    <string name="category">Category</string>
    <string name="add_transaction">Add transaction</string>
    <string name="amount">Amount</string>
    <string name="please_select">Please select category or add one</string>
    <string name="language">Language</string>
    <string name="dark_mode">Dark mode</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="rate_us">Rate Us</string>
    <string name="placeholder">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia, molestiae quas vel sint commodi repudiandae</string>
    <string name="add">Add</string>
    <string name="deleted_successfully">Deleted Successfully</string>
    <string name="undo">Undo</string>
    <string name="update_transaction">Update transaction</string>
    <string name="total">Total</string>
    <string name="there_are_no_transactions_yet">There are no transactions yet start adding some now</string>
    <string name="currency">Currency</string>
    <string name="general_analysis">General Analysis</string>
    <string name="average_spending">Average Spending:</string>
    <string name="highest_transaction">Highest Transaction:</string>
    <string name="lowest_transaction">Lowest Transaction:</string>
    <string name="highest_category">Highest Category:</string>
    <string name="lowest_category">Lowest Category:</string>
    <string name="liabilities_analysis">Liabilities Analysis</string>
    <string name="daily_analysis">Daily Analysis</string>
    <string name="categories_analysis">Categories Analysis</string>
    <string name="categories_expenses_analysis">Categories Expenses Analysis</string>
</resources>