<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?colorPrimary"
        android:orientation="vertical"
        android:padding="@dimen/_8sdp"
        tools:context=".ui.analysis.AnalysisFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/general_analysis"
                android:textColor="@color/white"
                android:textSize="@dimen/_24sdp" />


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="8dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/_4sdp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/average_spending"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_16sdp" />

                        <TextView
                            android:id="@+id/tv_avg_spending"

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_16sdp" />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:text="@string/highest_transaction"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_16sdp" />

                        <TextView
                            android:id="@+id/tv_highest_transaction"
                            android:layout_width="wrap_content"

                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_16sdp" />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:text="@string/lowest_transaction"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_16sdp" />

                        <TextView
                            android:id="@+id/tv_lowest_transaction"
                            android:layout_width="wrap_content"

                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_16sdp" />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:text="@string/highest_category"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_16sdp" />

                        <TextView
                            android:id="@+id/tv_highest_category"
                            android:layout_width="wrap_content"

                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_16sdp" />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/lowest_category"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_16sdp" />

                        <TextView
                            android:id="@+id/tv_lowest_category"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_16sdp" />

                    </LinearLayout>

                </LinearLayout>


            </androidx.cardview.widget.CardView>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:text="@string/liabilities_analysis"
                android:textColor="@color/white"
                android:textSize="@dimen/_24sdp" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/liabilities_analysis_pager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:text="@string/daily_analysis"
                android:textColor="@color/white"
                android:textSize="@dimen/_24sdp" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/daily_analysis_pager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </ScrollView>
</layout>

