<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?colorPrimary">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8sdp"
            android:orientation="vertical"
            tools:context=".ui.insights.InsightsFragment">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardUseCompatPadding="true"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/_16sdp">

                <com.github.mikephil.charting.charts.PieChart
                    android:id="@+id/expenses_chart"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_170sdp"
                    android:layout_margin="@dimen/_4sdp"
                    android:layout_weight="1" />


            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardUseCompatPadding="true"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/_16sdp">

                <com.github.mikephil.charting.charts.PieChart
                    android:id="@+id/income_chart"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_170sdp"
                    android:layout_margin="@dimen/_4sdp"
                    android:layout_weight="1" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardUseCompatPadding="true"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/_16sdp">

                <com.github.mikephil.charting.charts.PieChart
                    android:id="@+id/total_chart"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_170sdp"
                    android:layout_margin="@dimen/_4sdp"
                    android:layout_weight="1" />

            </androidx.cardview.widget.CardView>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/analysis"
                android:textSize="@dimen/_24sdp" />

            <TextView
                android:id="@+id/insights"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginBottom="@dimen/_16sdp"
                android:text="@string/placeholder"
                android:textSize="@dimen/_18sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@string/expenses"
                android:textColor="@color/medium_jungle_green"
                android:textSize="@dimen/_18sdp" />

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/expenses_summery"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_200sdp"
                android:layout_margin="@dimen/_8sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@string/income"
                android:textColor="@color/medium_jungle_green"
                android:textSize="@dimen/_18sdp" />

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/income_summery"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_200sdp"
                android:layout_margin="@dimen/_8sdp" />

        </LinearLayout>

    </ScrollView>
</layout>