<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:background="?colorPrimary"
        android:gravity="bottom"
        android:orientation="vertical"
        tools:context=".ui.more.MoreFragment">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_margin="@dimen/_8sdp"
            android:orientation="horizontal">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:text="@string/language"
                android:textSize="@dimen/_21sdp" />

            <Spinner
                android:id="@+id/language_selector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:entries="@array/languages"
                app:tint="@color/white" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha=".3"
            android:background="@color/white" />


        <RelativeLayout
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_margin="@dimen/_8sdp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dark_mode_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:text="@string/dark_mode"
                android:textSize="@dimen/_21sdp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switching_dark_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="13dp"
                android:layout_toStartOf="@+id/dark_mode_text"
                android:checked="true"
                android:textColor="@color/white" />

            <ImageView
                android:layout_width="@dimen/_52sdp"
                android:layout_height="@dimen/_52sdp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:padding="@dimen/_12sdp"
                android:src="@drawable/ic_baseline_dark_mode_24"
                app:tint="@color/white" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha=".3"
            android:background="@color/white" />


        <RelativeLayout
            android:id="@+id/privacy_policy_menu_item"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_margin="@dimen/_8sdp"
            android:orientation="horizontal">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:text="@string/privacy_policy"
                android:textSize="@dimen/_21sdp" />

            <ImageView
                android:layout_width="@dimen/_48sdp"
                android:layout_height="@dimen/_48sdp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:padding="@dimen/_12sdp"
                android:src="@drawable/ic_baseline_privacy_tip_24"
                app:tint="@color/white" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha=".3"
            android:background="@color/white" />

        <RelativeLayout
            android:id="@+id/rate_us_menu_item"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_margin="@dimen/_8sdp"
            android:orientation="horizontal">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:text="@string/rate_us"
                android:textSize="@dimen/_21sdp" />

            <ImageView
                android:layout_width="@dimen/_48sdp"
                android:layout_height="@dimen/_48sdp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:padding="@dimen/_12sdp"
                android:src="@drawable/ic_baseline_star_rate_24"
                app:tint="@color/white" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha=".3"
            android:background="@color/white" />
    </LinearLayout>
</layout>